force-app/main/default/objects/SecurityActionLog__c/SecurityActionLog__c.object-meta.xml
<CustomObject>
    <label>TSP 액션 로그</label>
    <nameField>
        <displayFormat>ACT-{00000000}</displayFormat>
        <label>TSP 액션 로그 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>