force-app/main/default/objects/SecurityActionLog__c/fields/ErrorStack__c.field-meta.xml
<CustomField>
    <fullName>ErrorStack__c</fullName>
    <description>액션 실패할 경우</description>
    <label>ErrorStack</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>