force-app/main/default/objects/SecurityActionLog__c/fields/ExecutedAt__c.field-meta.xml
<CustomField>
    <fullName>ExecutedAt__c</fullName>
    <label>ExecutedAt</label>
    <type>DateTime</type>
</CustomField>