force-app/main/default/objects/SecurityActionLog__c/fields/SecurityAuditLog__c.field-meta.xml
<CustomField>
    <fullName>SecurityAuditLog__c</fullName>
    <label>TSP 로그</label>
    <referenceTo>SecurityAuditLog__c</referenceTo>
    <relationshipLabel>TSP 액션 로그</relationshipLabel>
    <relationshipName>SecurityAuditLogList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>